--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 url: http://suucha.org
 title: Suucha Projects
 subtitle: Suucha的开源项目
-author: Your Name
+author: Suucha
 simple_search: http://google.com/search
 description:
 
@@ -58,7 +58,7 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/twitter.ht
 # ----------------------- #
 
 # Github repositories
-github_user:
+github_user: tubo70
 github_repo_count: 0
 github_show_profile_link: true
 github_skip_forks: true
@@ -77,7 +77,7 @@ google_plus_one_size: medium
 
 # Google Plus Profile
 # Hidden: No visible button, just add author information to search results
-googleplus_user:
+googleplus_user: tubo70@gmail.com
 googleplus_hidden: false
 
 # Pinboard
