--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://suucha.org
+url: http://tubo70.github.com
 title: Suucha Projects
 subtitle: Suucha的开源项目
 author: Suucha
